--- a/SwiftlyCacheDemo/Podfile
+++ b/SwiftlyCacheDemo/Podfile
@@ -1,5 +1,5 @@
 platform :ios,'9.0'
 use_frameworks!
 target 'SwiftlyCacheDemo' do
-pod 'SwiftlyCache', '~>1.1.8'
+  pod 'SwiftlyKeyValueStorage', :path => '..'
 end
